--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@restyjs/jwt",
-  "version": "0.0.1-alpha.21",
+  "version": "0.0.1",
   "description": "JWT middleware for resty.js.",
   "homepage": "https://restyjs.com",
   "main": "index.js",
